style: add a max width to the recommended items image to stop huge overflow.

--- a/styles/main.css
+++ b/styles/main.css
@@ -560,6 +560,10 @@ summary {
   transition: all 1s ease;
 }
 
+.recommended-item>a>img {
+  max-width: 200px;
+}
+
 /* ~ ====================================================
 ~                                          Footer
 ~                                        Section
